# Ego-Pick

./: ROS1_vs_ROS2_Guide.md  ROS2_EGO_Data_Collection_Architecture.md  readme.md
camera/: camera_viewer.py  capture_stereo.py  depth_process.py  depth_viewer.py  stereo_calibration.yaml  test.py
encoder/: encoder.md  read_encoder.py  read_encoder_plot.py
scripts/: usb_cam_publisher.py
ws/src/: package.xml  setup.py
ws/src/encoder_pkg/: package.xml  setup.py
ws/src/encoder_pkg/encoder_pkg/: encoder_plot.py  encoder_pub.py
ws/src/imu_pkg/: package.xml  setup.py
ws/src/imu_pkg/imu_pkg/: imu_cube_node.py  imu_node.py  qt_imu_viewer.py
ws/src/imu_pkg/launch/: imu.launch.py  imu_rviz.launch.py  qt_imu.launch.py
ws/src/imu_pkg/rviz/: imu_cube.rviz  imu_display.rviz
ws/src/launch/: encoder.launch.py  qt_encoder.launch.py
ws/src/scripts/: encoder_plot.py  read_encoder.py
ws/src/stereo_pkg/: package.xml  setup.cfg  setup.py
ws/src/stereo_pkg/launch/: qt_main.launch.py  qt_stereo.launch.py
ws/src/stereo_pkg/stereo_pkg/: main_ui.py  stereo_pub.py  stereo_viewer.py
ws/src/ui_pkg/: package.xml  setup.py
ws/src/ui_pkg/launch/: qt_main.launch.py
ws/src/ui_pkg/ui_pkg/: main_ui.py
