<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypenamespace="xsd"?>
<package format="3">
  <name>encoder_pkg</name>
  <version>1.0.0</version>
  <description>JY-ME01 Encoder driver package</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
