<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypenamespace="xsd"?>
<package format="3">
  <name>imu_pkg</name>
  <version>1.0.0</version>
  <description>WitMotion IMU ROS2 driver (JY-ME01)</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
